# lightplay

./: .gitignore  .todo  Makefile  bootstrap  configure.ac  main.c
src/: Makefile.am  main.c
